Overflow fix

--- a/css/master.css
+++ b/css/master.css
@@ -77,6 +77,7 @@ h1 {
   position: relative;
   font-style: italic;
   margin: 0 -1em;
+  overflow: hidden;
 }
 
 h1::before {
@@ -112,7 +113,7 @@ h1 span {
 h1 .p-given-name {
   font-size: 5.33em;
   color: var(--c-cyan);
-  text-shadow: 0 0 1em var(--c-cyan);
+  text-shadow: 0 0 .5em var(--c-cyan);
 }
 
 h1 .p-nickname {
